# binius

./: Cargo.toml
crates/acc-utils/: Cargo.toml
crates/acc-utils/src/: lib.rs
crates/circuits/src/: lib.rs  u8add.rs  unconstrained.rs
crates/circuits/src/builder/: constraint_system.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  witness.rs
crates/core/src/constraint_system/: channel.rs  mod.rs
crates/core/src/oracle/: constraint.rs  multilinear.rs
crates/core/src/ring_switch/: eq_ind.rs  mod.rs
crates/core/src/transcript/: mod.rs
crates/core/src/transparent/: constant.rs  disjoint_product.rs  eq_ind.rs  multilinear_extension.rs  powers.rs  select_row.rs  shift_ind.rs  step_down.rs  step_up.rs  tower_basis.rs
crates/field/: Cargo.toml
crates/field/src/: binary_field.rs  field.rs  lib.rs
crates/field/src/arch/aarch64/: m128.rs
crates/field/src/arch/portable/: packed.rs
crates/hash/src/: serialization.rs
crates/math/: Cargo.toml
crates/math/src/: arith_expr.rs  mle_adapters.rs  multilinear_extension.rs
crates/utils/src/: serialization.rs
examples/: Cargo.toml  acc-arthur.rs  acc-assert-eq.rs  acc-assert-ne-segfault.rs  acc-assert-ne.rs  acc-benchmark.rs  acc-blake3.rs  acc-debug.rs  acc-trivial.rs  acc-u32-addition.rs  acc-u8-addition.rs  u32addition_experiments.rs
